[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/EditMenuButton.gd" type="Script" id=1]
[ext_resource path="res://GUI/FileMenuButton.gd" type="Script" id=2]
[ext_resource path="res://SFXGenMain.gd" type="Script" id=3]
[ext_resource path="res://AddNodePopupMenu.gd" type="Script" id=4]

[node name="SFXGenMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RootVBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonHBoxContainer" type="HBoxContainer" parent="RootVBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="FileMenuButton" type="MenuButton" parent="RootVBoxContainer/MenuButtonHBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
switch_on_hover = true
script = ExtResource( 2 )

[node name="EditMenuButton" type="MenuButton" parent="RootVBoxContainer/MenuButtonHBoxContainer"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
text = "Edit"
switch_on_hover = true
script = ExtResource( 1 )

[node name="Tabs" type="Tabs" parent="RootVBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0
tab_align = 0
tab_close_display_policy = 2
scrolling_enabled = false

[node name="NoProjectsVBox" type="VBoxContainer" parent="RootVBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="RootVBoxContainer/NoProjectsVBox"]
margin_right = 1024.0
margin_bottom = 31.0
size_flags_vertical = 1
text = "Welcome to the Godot SFX Generator.
Click the huge button below to create a new project."
align = 1
uppercase = true

[node name="Button" type="Button" parent="RootVBoxContainer/NoProjectsVBox"]
margin_top = 35.0
margin_right = 1024.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Click me to create a new project."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddNodePopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )
[connection signal="tab_changed" from="RootVBoxContainer/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="tab_close" from="RootVBoxContainer/Tabs" to="." method="_on_Tabs_tab_close"]
[connection signal="pressed" from="RootVBoxContainer/NoProjectsVBox/Button" to="." method="_on_NoProjectsVBox_Button_pressed"]
[connection signal="id_pressed" from="AddNodePopupMenu" to="." method="_on_AddNodePopupMenu_id_pressed"]
